--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <!-- Шапка сайта -->
-    <header class="page-header">
+    <!-- <header class="page-header">
       <div class="container-head">
         <nav>
           <div class="all-nav">
@@ -61,11 +61,11 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
 
     <main>
       <!-- Герой -->
-      <section class="section hero">
+      <!-- <section class="section hero">
         <div class="container">
           <h1 class="hero__title">
             Эффективные решения
@@ -76,10 +76,10 @@
             Заказать услугу
           </button>
         </div>
-      </section>
+      </section> -->
 
       <!-- Преимущества -->
-      <section class="section benefit">
+      <!-- <section class="section benefit">
         <div class="container">
           <h2 class="visually-hidden">Преимущества компании</h2>
           <ul class="benefit-list">
@@ -125,10 +125,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- Функции -->
-      <section class="section feature">
+      <!-- <section class="section feature">
         <div class="container">
           <h2 class="feature-title">Чем мы занимаемся</h2>
           <ul class="feature-list">
@@ -158,7 +158,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- Команда -->
 
@@ -337,7 +337,7 @@
 
       <!-- Постоянные клиенты -->
 
-      <section class="section clients">
+      <!-- <section class="section clients">
         <div class="container">
           <h2 class="clients-title">Постоянные клиенты</h2>
           <ul class="clients-list">
@@ -385,11 +385,11 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
 
     <!-- Футер -->
-    <footer class="full-footer">
+    <!-- <footer class="full-footer">
       <div class="container footer">
         <div class="footer-contacts">
           <a href="./index.html" class="logo">
@@ -468,7 +468,7 @@
           </div>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
