Делает хэдер на телефонную версию

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <!-- Шапка сайта -->
-    <!-- <header class="page-header">
+    <header class="page-header">
       <div class="container-head">
         <nav>
           <div class="all-nav">
@@ -41,6 +41,9 @@
             </ul>
           </div>
         </nav>
+        <svg class="mail-icon" width="40" height="40">
+          <use href="./images/sprite.svg#icon-menu_40px"></use>
+        </svg>
 
         <ul class="contact-list">
           <li class="connection">
@@ -61,7 +64,37 @@
           </li>
         </ul>
       </div>
-    </header> -->
+      <div class="backdrop">
+        <div class="mob-menu">
+          <button type="button" class="mob-menu-btn-close">
+            <svg class="close-icon" width="18" height="18">
+              <use href="./images/sprite.svg#icon-close-black"></use>
+            </svg>
+          </button>
+          <ul class="mob-menu-list">
+            <li class="mob-menu-item">
+              <a href="" class="mob-menu-link">Студия</a>
+            </li>
+            <li class="mob-menu-item">
+              <a href="" class="mob-menu-link">Портфолио</a>
+            </li>
+            <li class="mob-menu-item">
+              <a href="" class="mob-menu-link">Контакты</a>
+            </li>
+          </ul>
+          <ul>
+            <li class="mob-menu-tel"><a href="">+38 096 111 11 11</a></li>
+            <li class="mob-menu-mail"><a href="">info@devstudio.com</a></li>
+          </ul>
+          <ul>
+            <li class="mob-menu-social-link">Instagram</li>
+            <li class="mob-menu-social-link">Twitter</li>
+            <li class="mob-menu-social-link">Facebookv</li>
+            <li class="mob-menu-social-link">LinkedIn</li>
+          </ul>
+        </div>
+      </div>
+    </header>
 
     <main>
       <!-- Герой -->
