--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@
             </ul>
           </div>
         </nav>
-        <svg class="mail-icon" width="40" height="40">
-          <use href="./images/sprite.svg#icon-menu_40px"></use>
-        </svg>
+        <button type="button" data-menu-open-btn class="mob-menu-btn-open">
+          <svg class="mail-icon" width="40" height="40">
+            <use href="./images/sprite.svg#icon-menu_40px"></use>
+          </svg>
+        </button>
 
         <ul class="contact-list">
           <li class="connection">
@@ -64,34 +66,40 @@
           </li>
         </ul>
       </div>
-      <div class="backdrop">
+      <div class="backdrop is-hidden" data-menu-backdrop>
         <div class="mob-menu">
-          <button type="button" class="mob-menu-btn-close">
-            <svg class="close-icon" width="18" height="18">
+          <button type="button" data-menu-close-btn class="mob-menu-btn-close">
+            <svg width="40" height="40">
               <use href="./images/sprite.svg#icon-close-black"></use>
             </svg>
           </button>
-          <ul class="mob-menu-list">
-            <li class="mob-menu-item">
-              <a href="" class="mob-menu-link">Студия</a>
-            </li>
-            <li class="mob-menu-item">
-              <a href="" class="mob-menu-link">Портфолио</a>
-            </li>
-            <li class="mob-menu-item">
-              <a href="" class="mob-menu-link">Контакты</a>
-            </li>
-          </ul>
-          <ul>
-            <li class="mob-menu-tel"><a href="">+38 096 111 11 11</a></li>
-            <li class="mob-menu-mail"><a href="">info@devstudio.com</a></li>
-          </ul>
-          <ul>
-            <li class="mob-menu-social-link">Instagram</li>
-            <li class="mob-menu-social-link">Twitter</li>
-            <li class="mob-menu-social-link">Facebookv</li>
-            <li class="mob-menu-social-link">LinkedIn</li>
-          </ul>
+
+          <div class="mob-menu-top">
+            <ul class="mob-menu-list">
+              <li class="mob-menu-item">
+                <a href="./index.html" class="mob-menu-link current">Студия</a>
+              </li>
+              <li class="mob-menu-item">
+                <a href="./portfolio.html" class="mob-menu-link">Портфолио</a>
+              </li>
+              <li class="mob-menu-item">
+                <a href="" class="mob-menu-link">Контакты</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="mob-menu-bottom">
+            <ul>
+              <li class="mob-menu-tel"><a href="">+38 096 111 11 11</a></li>
+              <li class="mob-menu-mail"><a href="">info@devstudio.com</a></li>
+            </ul>
+            <ul>
+              <li class="mob-menu-social-link">Instagram</li>
+              <li class="mob-menu-social-link">Twitter</li>
+              <li class="mob-menu-social-link">Facebook</li>
+              <li class="mob-menu-social-link">LinkedIn</li>
+            </ul>
+          </div>
         </div>
       </div>
     </header>
@@ -694,5 +702,6 @@
       </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
