--- a/portfolio.html
+++ b/portfolio.html
@@ -22,13 +22,13 @@
 
   <body>
     <!-- Шапка сайта -->
-    <!-- <header class="page-header">
+    <header class="page-header">
       <div class="container-head">
         <nav>
           <div class="all-nav">
             <a href="./index.html" class="logo">
               Web
-              <span class="logo-black">Studio</span>
+              <span class="logo_color_black">Studio</span>
             </a>
 
             <ul class="site-nav list">
@@ -42,6 +42,11 @@
             </ul>
           </div>
         </nav>
+        <button type="button" data-menu-open-btn class="mob-menu-btn-open">
+          <svg class="mail-icon" width="40" height="40">
+            <use href="./images/sprite.svg#icon-menu_40px"></use>
+          </svg>
+        </button>
 
         <ul class="contact-list">
           <li class="connection">
@@ -62,7 +67,43 @@
           </li>
         </ul>
       </div>
-    </header> -->
+      <div class="backdrop is-hidden" data-menu-backdrop>
+        <div class="mob-menu">
+          <button type="button" data-menu-close-btn class="mob-menu-btn-close">
+            <svg width="40" height="40">
+              <use href="./images/sprite.svg#icon-close-black"></use>
+            </svg>
+          </button>
+
+          <div class="mob-menu-top">
+            <ul class="mob-menu-list">
+              <li class="mob-menu-item">
+                <a href="" class="mob-menu-link">Студия</a>
+              </li>
+              <li class="mob-menu-item">
+                <a href="" class="mob-menu-link current">Портфолио</a>
+              </li>
+              <li class="mob-menu-item">
+                <a href="" class="mob-menu-link">Контакты</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="mob-menu-bottom">
+            <ul>
+              <li class="mob-menu-tel"><a href="">+38 096 111 11 11</a></li>
+              <li class="mob-menu-mail"><a href="">info@devstudio.com</a></li>
+            </ul>
+            <ul>
+              <li class="mob-menu-social-link">Instagram</li>
+              <li class="mob-menu-social-link">Twitter</li>
+              <li class="mob-menu-social-link">Facebook</li>
+              <li class="mob-menu-social-link">LinkedIn</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </header>
 
     <main>
       <!-- Портфолио  -->
@@ -462,65 +503,68 @@
     </main>
 
     <!-- Футер -->
-    <!-- <footer class="full-footer">
+    <footer class="full-footer">
       <div class="container footer">
-        <div class="footer-contacts">
-          <a href="./index.html" class="logo">
-            Web
-            <span class="logo-white">Studio</span>
-          </a>
+        <div class="footer-all-contacts">
+          <div class="footer-contacts">
+            <a href="./index.html" class="logo">
+              Web
+              <span class="logo_color_white">Studio</span>
+            </a>
 
-          <address class="address">
-            <p class="address-details">г. Киев, пр-т Леси Украинки, 26</p>
-            <ul class="contact list">
-              <li class="contact-details">
-                <a href="mailto:info@example.com" class="mail-footer">
-                  info@example.com
+            <address class="address">
+              <p class="address-details">г. Киев, пр-т Леси Украинки, 26</p>
+              <ul class="contact list">
+                <li class="contact-details">
+                  <a href="mailto:info@example.com" class="mail-footer">
+                    info@example.com
+                  </a>
+                </li>
+                <li class="contact-details">
+                  <a href="tel:+380961111111" class="phone-footer">
+                    +38 096 111 11 11
+                  </a>
+                </li>
+              </ul>
+            </address>
+          </div>
+
+          <div class="footer-social-links">
+            <h3 class="footer-title">присоединяйтесь</h3>
+
+            <ul class="social-list">
+              <li class="footer-social-item">
+                <a href="" class="footer-social-link">
+                  <svg class="footer-social-icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-instagram-1"></use>
+                  </svg>
                 </a>
               </li>
-              <li class="contact-details">
-                <a href="tel:+380961111111" class="phone-footer">
-                  +38 096 111 11 11
+              <li class="footer-social-item">
+                <a href="" class="footer-social-link">
+                  <svg class="footer-social-icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-twitter-2"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-social-item">
+                <a href="" class="footer-social-link">
+                  <svg class="footer-social-icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-facebook-3"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-social-item">
+                <a href="" class="footer-social-link">
+                  <svg class="footer-social-icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-linkedin-4"></use>
+                  </svg>
                 </a>
               </li>
             </ul>
-          </address>
+          </div>
         </div>
 
-        <div class="footer-social-links">
-          <h3 class="footer-title">присоединяйтесь</h3>
-
-          <ul class="social-list">
-            <li class="social-item">
-              <a href="" class="footer-social-link">
-                <svg class="footer-social-icon" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-instagram-1"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-item">
-              <a href="" class="footer-social-link">
-                <svg class="footer-social-icon" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-twitter-2"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-item">
-              <a href="" class="footer-social-link">
-                <svg class="footer-social-icon" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-facebook-3"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-item">
-              <a href="" class="footer-social-link">
-                <svg class="footer-social-icon" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-linkedin-4"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </div>
         <div class="footer-subscripe">
           <h3 class="footer-title">Подпишитесь на рассылку</h3>
           <div class="footer-online-form">
@@ -541,6 +585,6 @@
           </div>
         </div>
       </div>
-    </footer> -->
+    </footer>
   </body>
 </html>
