улучшает мобильное меню

--- a/portfolio.html
+++ b/portfolio.html
@@ -78,10 +78,12 @@
           <div class="mob-menu-top">
             <ul class="mob-menu-list">
               <li class="mob-menu-item">
-                <a href="" class="mob-menu-link">Студия</a>
+                <a href="./index.html" class="mob-menu-link">Студия</a>
               </li>
               <li class="mob-menu-item">
-                <a href="" class="mob-menu-link current">Портфолио</a>
+                <a href="./portfolio.html" class="mob-menu-link current"
+                  >Портфолио</a
+                >
               </li>
               <li class="mob-menu-item">
                 <a href="" class="mob-menu-link">Контакты</a>
@@ -586,5 +588,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
