--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <div class="mob-menu-top">
             <ul class="mob-menu-list">
               <li class="mob-menu-item">
-                <a href="./index.html" class="mob-menu-link current">Студия</a>
+                <a href="c" class="mob-menu-link current">Студия</a>
               </li>
               <li class="mob-menu-item">
                 <a href="./portfolio.html" class="mob-menu-link">Портфолио</a>
@@ -90,14 +90,30 @@
 
           <div class="mob-menu-bottom">
             <ul>
-              <li class="mob-menu-tel"><a href="">+38 096 111 11 11</a></li>
-              <li class="mob-menu-mail"><a href="">info@devstudio.com</a></li>
+              <li class="mob-menu-tel">
+                <a href="tel:+380961111111" class="mob-menu-number"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+              <li class="mob-menu-mail">
+                <a href="mailto:info@devstudio.com" class="mob-menu-com"
+                  >info@devstudio.com</a
+                >
+              </li>
             </ul>
             <ul>
-              <li class="mob-menu-social-link">Instagram</li>
-              <li class="mob-menu-social-link">Twitter</li>
-              <li class="mob-menu-social-link">Facebook</li>
-              <li class="mob-menu-social-link">LinkedIn</li>
+              <li class="mob-menu-social-link">
+                <a href="" class="mob-menu-links">Instagram</a>
+              </li>
+              <li class="mob-menu-social-link">
+                <a href="" class="mob-menu-links">Twitte</a> r
+              </li>
+              <li class="mob-menu-social-link">
+                <a href="" class="mob-menu-links">Facebook</a>
+              </li>
+              <li class="mob-menu-social-link">
+                <a href="" class="mob-menu-links">LinkedIn</a>
+              </li>
             </ul>
           </div>
         </div>
